--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
 
     <body>
         <div id="container">
+            <div id="welcome-container">
             <h2>Coding Quiz Challenge</h2>
             <p>Try answer the following code related questions winthin the limit.</p>
             <p>Keep in mind that incorrect answers will penalize your score/time by ten seconds</p>
             <button id="starttrivia">Start Quiz</button>
-            <!--Division for the quiz
-            <div id="question"></div>
-            <div id="options"></div>
-                <div class="option" id="1" onclick="checkAnswer"></div>
-            <div id="alert"></div-->
-
+            </div>
+            <!--Division for the quiz-->
+            <div id="trivia" style="display: none">
+                <div id="question"></div>
+                <div id="options">
+                    <div class="option" id="option-1" onclick="checkAnswer('option-1')"></div>
+                    <div class="option" id="option-2" onclick="checkAnswer('option-2')"></div>
+                    <div class="option" id="option-3" onclick="checkAnswer('option-3')"></div>
+                    <div class="option" id="option-4" onclick="checkAnswer('option-4')"></div>
+                </div>
+            </div>
+            <div id="alert"></div>
         </div>
     </body>
 
