game over screen done and timer set up

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <header>
-        <h4>View High Score</h3>
-        <h4>Time:</h4>
+        <a>View High Score</a>
     </header>
 
     <body>
@@ -28,8 +27,15 @@
                     <div class="option" id="option-3" onclick="checkAnswer('option-3')"></div>
                     <div class="option" id="option-4" onclick="checkAnswer('option-4')"></div>
                 </div>
+                <h3 id="evaluation"></h3>
             </div>
-            <div id="alert"></div>
+            <form id="game-over">
+                <h2 id="all-done"></h2>
+                <p id="final-score"></p>
+                <!--input id="initials"/>
+                <label id="enter-initials"></label>
+                <button id="submit-initials"></button-->
+            </form>
         </div>
     </body>
 
