timer set up and local storage %

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
             <form id="game-over">
                 <h2 id="all-done"></h2>
                 <p id="final-score"></p>
-                <!--input id="initials"/>
-                <label id="enter-initials"></label>
-                <button id="submit-initials"></button-->
+                <label id="enter-initials" style="display: none"></label>
+                <input type="text" name="initials" id="initials" style="display: none"/>
+                <button id="submit-initials" style="display: none"></button>
+            </form>
+            <form id="high-score">
+                <h2 id="hs-title" style="display: none"></h2>
+                <p><span id="hs-player"></span></p>
+                <button id="go-backbtn" style="display: none"></button>
+                <button id="clearhs-btn" style="display: none"></button>
             </form>
         </div>
     </body>
