--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <header>
-        <a>View High Score</a>
+        <a id="view-hs">View High Score</a>
+        <P id="timer" style="display: inline-block">Timer: 0</P>
     </header>
 
     <body>
@@ -29,12 +30,12 @@
                 </div>
                 <h3 id="evaluation"></h3>
             </div>
-            <form id="game-over">
-                <h2 id="all-done"></h2>
+            <form id="game-over" style="display: none">
+                <h2 id="all-done">All Done!</h2>
                 <p id="final-score"></p>
-                <label id="enter-initials" style="display: none"></label>
-                <input type="text" name="initials" id="initials" style="display: none"/>
-                <button id="submit-initials" style="display: none"></button>
+                <label id="enter-initials">Enter Initials:</label>
+                <input type="text" name="initials" id="initials" />
+                <button id="submit-initials" >Submit</button>
             </form>
             <form id="high-score">
                 <h2 id="hs-title" style="display: none"></h2>
